# auxiliary

./: pyproject.toml
dev_tools/: manual_calibration.py
ops/auxiliary/devices/: base.py  load_cell.py
ops/auxiliary/drivers/: base.py  measurement.py  voltage_ratio_bridge.py
ops/auxiliary/services/: base_acquisition.py  load_cell.py
